# Trading_System

./: .gitignore  CMakeLists.txt  README.md
config/: settings.json
data/: BTCUSD_15m_historical_data.csv  BTCUSD_H4_historical_data.csv  BTCUSD_historical_data.csv  GBPUSD_historical_data.csv  USDJPY_historical_data.csv  XAUUSD_H4_historical_data.csv  XAUUSD_historical_data.csv
include/: Candle.h  Config.h  DataReader.h  LoggingUtils.h  MarketStructure.h  Order.h  OrderBlock.h  OrderBlockAnalyzer.h  Strategy.h  StructureUtils.h  Trade.h  TradingUtils.h
src/: Config.cpp  DataReader.cpp  LoggingUtils.cpp  MarketStructure.cpp  Order.cpp  OrderBlock.cpp  OrderBlockAnalyzer.cpp  Strategy.cpp  StructureUtils.cpp  TradingUtils.cpp  main.cpp
